--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = []
 python = "^3.7"
 flask = "^1.1.2"
 python-dotenv = "^0.14.0"
+arrow = "^1.2.1"
+python-dateutil = "^2.8.2"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 
