--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-dateutil = "^2.8.2"
 requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.0.1"
+pytest-freezegun = "^0.4.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
