addressed comments and refactored tasks for idempotency

--- a/ansible/roles/setup_todo_app/handlers/main.yaml
+++ b/ansible/roles/setup_todo_app/handlers/main.yaml
@@ -1,6 +1,6 @@
 - name: enable_todo_service
   systemd:
     name: todoapp
-    state: started
+    state: restarted
     enabled: yes
     daemon_reload: yes
