--- a/ansible/roles/setup_todo_app/tasks/main.yaml
+++ b/ansible/roles/setup_todo_app/tasks/main.yaml
@@ -6,28 +6,16 @@
     group: ec2-user
     mode: '755'
 
-- name: Check if /opt/todoapp is empty
-  find:
-    paths: /opt/todoapp
-    file_type: directory
-  register: files
-
 - name: Download to-do app from github
   git:
     repo: 'https://github.com/MHolmes219/DevOps-Course-Starter.git'
     dest: /opt/todoapp
-  when: not files.files
+    force: yes
+  notify: enable_todo_service
 
 - name: Update todoapp permissions
   command:
     cmd: chown -R ec2-user:ec2-user /opt/todoapp
-
-- name: Add gunicorn with poetry
-  shell:
-    cmd: poetry add gunicorn
-  args:
-    chdir: /opt/todoapp
-  become: false
 
 - name: Run poetry install
   shell:
@@ -43,6 +31,7 @@
     owner: ec2-user
     group: ec2-user
     mode: '644'
+  notify: enable_todo_service
 
 - name: Create todo app service
   template:
