--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python-dotenv = "^0.14.0"
 arrow = "^1.2.1"
 python-dateutil = "^2.8.2"
 requests = "^2.26.0"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
