--- a/.github/workflows/exercise7-pipeline.yaml
+++ b/.github/workflows/exercise7-pipeline.yaml
@@ -16,6 +16,9 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run: docker build --target test --platform linux/amd64 --tag todo-app:test .
-    - run: docker run --env-file ./.env.test todo-app:test
+      - name: Checkout files 
+        uses: actions/checkout@v2
+      - name: Build docker
+        run: docker build --target test --platform linux/amd64 --tag todo-app:test .
+      - name: Run tests
+        run: docker run --env-file ./.env.test todo-app:test
