--- a/.github/workflows/exercise7-pipeline.yaml
+++ b/.github/workflows/exercise7-pipeline.yaml
@@ -1,7 +1,7 @@
 name: Continuous Integration
 on: 
   push:
-    paths:
+    paths-ignore:
       - 'README.md'
       - '.gitignore'
       - 'documentation'
