--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ arrow = "^1.2.1"
 python-dateutil = "^2.8.2"
 requests = "^2.26.0"
 gunicorn = "^20.1.0"
+markupsafe = "2.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
