--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,3 +22,9 @@ jobs:
         run: docker build --target test --platform linux/amd64 --tag todo-app:test .
       - name: Run tests
         run: docker run --env-file ./.env.test todo-app:test
+  publish:
+    name: Push to docker hub
+    steps:
+      - name: test
+        run: echo "Publishing!"
+    needs: build
