--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -24,6 +24,7 @@ jobs:
         run: docker run --env-file ./.env.test todo-app:test
   publish:
     name: Push to docker hub
+    runs-on: ubuntu-latest
     steps:
       - name: test
         run: echo "Publishing!"
