added if conditionals

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,3 +29,6 @@ jobs:
       - name: test
         run: echo "Publishing!"
     needs: build
+    if: |
+      github.event_name == 'push'
+      github.ref == 'refs/heads/main'
