--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -30,5 +30,5 @@ jobs:
         run: echo "Publishing!"
     needs: build
     if: |
-      github.event_name == 'push'
-      github.ref == 'refs/heads/main'
+      ${{ github.event_name == 'push' }}
+      ${{ github.ref == 'refs/heads/main' }}
