--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,9 +23,7 @@ jobs:
       - name: Run tests
         run: docker run --env-file ./.env.test todo-app:test
   publish:
-    if: |
-      ${{ github.event_name == 'push' }}
-      ${{ github.ref == 'refs/heads/main' }}
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
     steps:
