--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,8 +36,10 @@ jobs:
     name: Push to docker hub
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout files 
+        uses: actions/checkout@v2
       - name: Build docker
-        run: docker build --target production --tag ${{ github.sha }} .
+        run: docker build --target production --tag todo-app:prod-${{ github.sha }} .
       - name: Push to docker hub
         run: docker push ${{ github.sha }}
     needs: build
