--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -9,7 +9,7 @@ on:
     types:
       - submitted
   schedule:
-    - cron:  '30 17 * * *'
+    - cron: '30 17 * * *'
 
 jobs:
   build:
@@ -23,6 +23,10 @@ jobs:
       - name: Run tests
         run: docker run --env-file ./.env.test todo-app:test
   publish:
+    env:
+      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
+      HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
     if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
@@ -48,19 +52,14 @@ jobs:
               login $HEROKU_EMAIL
               password $HEROKU_API_KEY
           EOF
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
       - name: Add Heroku remote
         run: heroku git:remote --app $HEROKU_APP_NAME
-        env:
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       - name: Login into Heroku's registry
         run: heroku container:login
       - name: Tag for heroku
-        run: docker tag ${{ secrets.DOCKER_HUB_ACCESS_USER }}/todo-app:prod-${{ github.sha }} registry.heroku.com/mh-todo-app/web
+        run: docker tag ${{ secrets.DOCKER_HUB_ACCESS_USER }}/todo-app:prod-${{ github.sha }} registry.heroku.com/${{ HEROKU_APP_NAME }}/web
       - name: Push to heroku
-        run: docker push registry.heroku.com/mh-todo-app/web
+        run: docker push registry.heroku.com/${{ HEROKU_APP_NAME }}/web
       - name: Release heroku
         run: heroku container:release web
     needs: build
