moved vars to job

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,6 +23,12 @@ jobs:
       - name: Run tests
         run: docker run --env-file ./.env.test todo-app:test
   publish:
+    env:
+      HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+      DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_ACCESS_USER }}
+      DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
     if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
@@ -30,14 +36,14 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          user: ${{ secrets.DOCKER_HUB_ACCESS_USER }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          user: $DOCKER_HUB_USER
+          password: $DOCKER_HUB_TOKEN
       - name: Checkout files 
         uses: actions/checkout@v2
       - name: Build docker
-        run: docker build --target production --tag ${{ secrets.DOCKER_HUB_ACCESS_USER }}/todo-app:prod-${{ github.sha }} .
+        run: docker build --target production --tag /todo-app:prod-${{ github.sha }} .
       - name: Push to docker hub
-        run: docker push ${{ secrets.DOCKER_HUB_ACCESS_USER }}/todo-app:prod-${{ github.sha }}
+        run: docker push $DOCKER_HUB_USER/todo-app:prod-${{ github.sha }}
       - name: Heroku login credentials
         run: |
           cat > ~/.netrc <<EOF
@@ -48,23 +54,14 @@ jobs:
               login $HEROKU_EMAIL
               password $HEROKU_API_KEY
           EOF
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
       - name: Add Heroku remote
         run: heroku git:remote --app $HEROKU_APP_NAME
-        env:
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       - name: Login into Heroku's registry
         run: heroku container:login
       - name: Tag for heroku
-        run: docker tag ${{ secrets.DOCKER_HUB_ACCESS_USER }}/todo-app:prod-${{ github.sha }} registry.heroku.com/$HEROKU_APP_NAME/web
-        env:
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+        run: docker tag $DOCKER_HUB_USER/todo-app:prod-${{ github.sha }} registry.heroku.com/$HEROKU_APP_NAME/web
       - name: Push to heroku
         run: docker push registry.heroku.com/$HEROKU_APP_NAME/web
-        env:
-          HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       - name: Release heroku
         run: heroku container:release web
     needs: build
