--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          user: $DOCKER_HUB_USER
+          username: $DOCKER_HUB_USER
           password: $DOCKER_HUB_TOKEN
       - name: Checkout files 
         uses: actions/checkout@v2
