--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,8 +36,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: $DOCKER_HUB_USER
-          password: $DOCKER_HUB_TOKEN
+          username: ${{ DOCKER_HUB_USER }}
+          password: ${{ DOCKER_HUB_TOKEN }}
       - name: Checkout files 
         uses: actions/checkout@v2
       - name: Build docker
