--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -26,7 +26,6 @@ jobs:
     env:
       HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_ACCESS_USER }}
-      DOCKER_HUB_TOKEN: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
     if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
@@ -36,8 +35,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ DOCKER_HUB_USER }}
-          password: ${{ DOCKER_HUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_ACCESS_USER }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       - name: Checkout files 
         uses: actions/checkout@v2
       - name: Build docker
