remove conditional to confirm curl command runs successfully

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -27,7 +27,7 @@ jobs:
       HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
       DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_ACCESS_USER }}
       AZURE_PASSWORD: ${{ secrets.AZURE_PASSWORD }}
-    if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    # if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
     steps:
