--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -42,5 +42,5 @@ jobs:
       - name: Push to docker hub
         run: docker push $DOCKER_HUB_USER/todo-app:prod-latest
       - name: Re-pull and restart the app in azure
-        run: curl -dH -X POST 'https://\$mh-todo-app-2022:$AZURE_PASSWORD@mh-todo-app-2022.scm.azurewebsites.net/api/registry/webhook'
+        run: curl -dH -X POST 'https://\$mh-todo-app-2022:$AZURE_PASSWORD@mh-todo-app-2022.scm.azurewebsites.net/api/registry/webhook' --fail
     needs: build
