updated app to run with cosmosdb

--- a/.env.test
+++ b/.env.test
@@ -8,3 +8,6 @@ SECRET_KEY=secretkey
 API_KEY=12345abcde
 API_TOKEN=1234567890
 BOARD_ID=61beadyeyes40
+
+ENDPOINT=mongodb://fakemongo.com
+DATABASE=mh-todoapp-2022
