--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-dateutil = "^2.8.2"
 requests = "^2.26.0"
 gunicorn = "^20.1.0"
 markupsafe = "2.0.1"
+pymongo = "^4.2.0"
+mongomock = "^4.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
