--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -38,9 +38,9 @@ jobs:
       - name: Checkout files 
         uses: actions/checkout@v2
       - name: Build docker
-        run: docker build --target production --tag $DOCKER_HUB_USER/todo-app:prod-latest .
+        run: docker build --target production --tag $DOCKER_HUB_USER/todo-app:latest .
       - name: Push to docker hub
-        run: docker push $DOCKER_HUB_USER/todo-app:prod-latest
+        run: docker push $DOCKER_HUB_USER/todo-app:latest
       - name: Re-pull and restart the app in azure
-        run: curl -dH -X POST 'https://\$mh-todo-app-2022:$AZURE_PASSWORD@mh-todo-app-2022.scm.azurewebsites.net/api/registry/webhook' --fail
+        run: curl -dH -X POST 'https://\$mh-todo-app-2022:${{ secrets.AZURE_PASSWORD }}@mh-todo-app-2022.scm.azurewebsites.net/api/registry/webhook' --fail
     needs: build
