--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ gunicorn = "^20.1.0"
 markupsafe = "2.0.1"
 pymongo = "^4.2.0"
 mongomock = "^4.1.2"
+Flask-Login = "^0.6.2"
+flask_accept = "^0.0.6"
+Flask-User = "^1.0.2"
+email-validator = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
