added terraform deployment

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,11 @@ env/
 
 ### Configuration files ###
 .env
+
+### Terraform
+.terraform
+.terraform.lock.hcl
+.tfstate
+.tfplan
+.tfstate
+.tfstate.backup
