--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -26,7 +26,7 @@ jobs:
     env:
       DOCKER_HUB_USER: ${{ secrets.DOCKER_HUB_ACCESS_USER }}
       AZURE_PASSWORD: ${{ secrets.AZURE_PASSWORD }}
-    if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    # if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
     steps:
@@ -41,6 +41,8 @@ jobs:
         run: docker build --target production --tag $DOCKER_HUB_USER/todo-app:latest .
       - name: Push to docker hub
         run: docker push $DOCKER_HUB_USER/todo-app:latest
+      - name: Terraform init
+        run: terraform init
       - name: Re-pull and restart the app in azure
         run: curl -dH -X POST "https://\$mh-todo-app-2022:$AZURE_PASSWORD@mh-todo-app-2022.scm.azurewebsites.net/api/registry/webhook" --fail
     needs: build
