--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Terraform init
         run: terraform init
       - name: Deploy app with terraform
-        run: terraform apply -var "client_id=$AZURE_CLIENT_ID" -var "client_secret=$AZURE_CLIENT_SECRET" -var "secret_key=$SECRET_KEY" -auto-approve
+        run: terraform apply -var "client_id=${{ secrets.AZURE_CLIENT_ID }}" -var "client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" -var "secret_key=${{ secrets.SECRET_KEY }}" -auto-approve
       - name: Re-pull and restart the app in azure
         run: curl -dH -X POST "$(terraform output -raw cd_webhook)" --fail
     needs: build
