--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -29,7 +29,7 @@ jobs:
       TF_VAR_client_secret: ${{ secrets.TF_VAR_CLIENT_SECRET }}
       TF_VAR_secret_key: ${{ secrets.TF_VAR_SECRET_KEY }}
       TF_VAR_arm_client_secret: ${{ secrets.TF_VAR_ARM_CLIENT_SECRET }}
-    # if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
     steps:
