--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -32,7 +32,7 @@ jobs:
       TF_VAR_azure_client_id: ${{ secrets.TF_VAR_AZURE_CLIENT_ID }}
       TF_VAR_azure_subscription_id: ${{ secrets.TF_VAR_AZURE_SUBSCRIPTION_ID }}
       TF_VAR_azure_tenant_id: ${{ secrets.TF_VAR_AZURE_TENANT_ID }}
-    if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
+    # if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
     steps:
