--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Login to azure
         uses: azure/login@v1
         with:
-          creds: '${{ secrets.AZURE_CREDENTIALS }}'
+          creds: '${{ secrets.ARM_CREDENTIALS }}'
       - name: 'Run Azure CLI commands'
         run: |
           az account show
