--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -28,10 +28,10 @@ jobs:
       TF_VAR_client_id: ${{ secrets.TF_VAR_CLIENT_ID }}
       TF_VAR_client_secret: ${{ secrets.TF_VAR_CLIENT_SECRET }}
       TF_VAR_secret_key: ${{ secrets.TF_VAR_SECRET_KEY }}
-      TF_VAR_arm_client_secret: ${{ secrets.TF_VAR_ARM_CLIENT_SECRET }}
-      TF_VAR_arm_client_id: ${{ secrets.TF_VAR_ARM_CLIENT_ID }}
-      TF_VAR_arm_subscription_id: ${{ secrets.TF_VAR_ARM_SUBSCRIPTION_ID }}
-      TF_VAR_arm_tenant_id: ${{ secrets.TF_VAR_ARM_TENANT_ID }}
+      TF_VAR_azure_client_secret: ${{ secrets.TF_VAR_ARM_CLIENT_SECRET }}
+      TF_VAR_azure_client_id: ${{ secrets.TF_VAR_ARM_CLIENT_ID }}
+      TF_VAR_azure_subscription_id: ${{ secrets.TF_VAR_ARM_SUBSCRIPTION_ID }}
+      TF_VAR_azure_tenant_id: ${{ secrets.TF_VAR_ARM_TENANT_ID }}
     # if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
@@ -44,7 +44,7 @@ jobs:
       - name: Login to azure
         uses: azure/login@v1
         with:
-          creds: '${{ secrets.ARM_CREDENTIALS }}'
+          creds: '${{ secrets.AZURE_CREDENTIALS }}'
       - name: 'Run Azure CLI commands'
         run: |
           az account show
@@ -57,7 +57,11 @@ jobs:
       - name: Push to docker hub
         run: docker push $DOCKER_HUB_USER/todo-app:latest
       - name: Terraform init
-        run: terraform init
+        run: |
+          export ARM_CLIENT_ID=${{ secrets.TF_VAR_ARM_CLIENT_ID }}
+          export ARM_CLIENT_SECRET=${{ secrets.TF_VAR_CLIENT_SECRET }}
+          export ARM_TENANT_ID=${{ secrets.TF_VAR_ARM_TENANT_ID }}
+          terraform init
       - name: Deploy app with terraform
         run: terraform apply -auto-approve
       - name: Re-pull and restart the app in azure
