--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -32,6 +32,10 @@ jobs:
       TF_VAR_azure_client_id: ${{ secrets.TF_VAR_ARM_CLIENT_ID }}
       TF_VAR_azure_subscription_id: ${{ secrets.TF_VAR_ARM_SUBSCRIPTION_ID }}
       TF_VAR_azure_tenant_id: ${{ secrets.TF_VAR_ARM_TENANT_ID }}
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
     # if: (github.event_name == 'push' && github.ref == 'refs/heads/main')
     name: Push to docker hub
     runs-on: ubuntu-latest
@@ -58,9 +62,6 @@ jobs:
         run: docker push $DOCKER_HUB_USER/todo-app:latest
       - name: Terraform init
         run: |
-          export ARM_CLIENT_ID=${{ secrets.TF_VAR_ARM_CLIENT_ID }}
-          export ARM_CLIENT_SECRET=${{ secrets.TF_VAR_CLIENT_SECRET }}
-          export ARM_TENANT_ID=${{ secrets.TF_VAR_ARM_TENANT_ID }}
           terraform init
       - name: Deploy app with terraform
         run: terraform apply -auto-approve
