--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ Flask-Login = "^0.6.2"
 flask_accept = "^0.0.6"
 Flask-User = "^1.0.2"
 email-validator = "^1.3.0"
+loggly-python-handler = "^1.0.1"
+python-json-logger = "^2.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
