--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
           image: todo-app:prod
           imagePullPolicy: Never
           ports:
-          - containerPort: 5001
+          - containerPort: 5000
           env:
             - name: SECRET_KEY
               valueFrom:
@@ -59,4 +59,4 @@ spec:
             - name: FLASK_ENV
               value: "production"
             - name: LOGIN_DISABLED
-              value: "True"
+              value: "False"
