--- a/.env.template
+++ b/.env.template
@@ -8,6 +8,6 @@ SECRET_KEY=secret-key
 ENDPOINT=endpoint
 DATABASE=database
 
-LOGIN_DISABLED=True
+LOGIN_DISABLED=False
 LOG_LEVEL=DEBUG
 LOGGLY_TOKEN=testtoken
